updated heading paras for analysis

--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -29,9 +29,13 @@
           <h2>Age and Obesity...Is There A Correlation?</h2>
           <p>Though the data is static with minimal factors.  Obesity continues to a leading cause of death in the United States.</p>
 
-          <p>Pellentesque.</p>
+          <p>As we can see in the data the median age betwen 36 and 40 years of age is a crital age group for obesity. 
+            Both in Men and Women, hormons levels greatly change during this age range.  
+          </p>
 
-          <p>Pellentesque </p>
+          <p> We al so notice a Correlation with the location of specific states that have the highest obestity percentage.
+              Southern and rual States from both East and West coast have social impact of obesity.  
+          </p>
         </div>
       </div>
     </div>
